--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -103,6 +103,8 @@ Die verwendete Notation richtet sich nach dem UML-Standard.
 
 \section{Klassenübersicht}
 \section{Klassenbeschreibung Model}
+\subsection{Bibliothek}
+\subsubsection{BibMain}
 \subsection{ServiceManager}
 	\paragraph{Klassenbeschreibung:}
 	Der ServiceManager verwaltet alle Services des Models mithilfe eines Serviceproviders. Dies wird von anderen Services des Models, sowie von dem Viewmodel benutzt. Er dient zur Delegierung der Services.\\ 
