--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -488,6 +488,18 @@ Die Klasse ListenAndPerformViewmodel enthält die Logik von Listen\&Perform und 
 \subsection{BluetoothPopUpViewmodel}
 
 \section{Klassenbeschreibung View}
+\subsection{StepModePage}
+\subsection{StepModeActivePage}
+\subsection{CountModePage}
+\subsection{CountModeActivePage}
+\subsection{ListenAndPerformPage}
+\subsection{ListenAndPerformActivePage}
+\subsection{MusicModePage}
+\subsection{DataOverviewPage}
+\subsection{ImportExportPage}
+\subsection{SettingsPage}
+\subsection{BluetoothPopUpPage}
+\subsection{MenuPage}
 \section{Interaktionsdiagramme}
 \subsection{Aktivitätsdiagramm Lauschen und Agieren}
 \subsection{Sequenzdiagramme}
