Kapitel in VIewmodel hinzugefügt

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -379,6 +379,7 @@ Dieses Event benachrichtigt Listener, falls der neue IMU Daten vorliegen.
 	 + static parseDBEntry(entry: String) : DBEntry & Liest aus einem String ein DBEntry Objekt. Falls der String nicht dem Format entspricht, wird null zurückgegeben. \\
 	\end{tabular}
 \section{Klassenbeschreibung View-Model}
+\subsection{BasicViewmodel}
 \subsection{StepModeViewmodel}
 \paragraph{Klassenbeschreibung:}
 Die Klasse CountModeViewmodel enthält die Logik des Stepmodes  und hält Attribute die per Databinding an die Viewklassen CountModeView und CountModeActiveView gebunden sind. 
